<resources>
    <string name="app_name" translatable="false">Hangar</string>
    <string name="title_general">General</string>
    <string name="title_behavior">Behavior</string>
    <string name="title_appearance">Appearance</string>
    <string name="title_apps">Apps</string>
    <string name="title_activity_settings">Hangar Settings</string>
    <string name="title_toggle_preference">Notification bar</string>
    <string name="title_boot_preference">Start on boot</string>
    <string name="title_icon_pack_preference">Icon pack</string>
    <string name="default_icon_pack">Default Icons</string>
    <string name="reset_icon">Use default icon</string>
    <string name="switched_icon_packs_alert">Rebuilding icon cache.  This may take a few seconds!</string>
    <string name="title_icon_pack_picker">Pick an icon pack</string>
    <string name="title_icon_pack_choose_from">Choose from an icon pack</string>
    <string name="title_icon_pack_not_found">No icon packs found</string>
    <string name="title_icon_pack_install">Find an icon pack</string>
    <string name="title_icon_pack_no_single_ui">Your chosen icon pack (%1$s) does not provide a UI for individual icon selection.\n\nPlease contact the icon pack developer for more information.</string>
    <string name="title_icon_pack_no_single_picks">You have not selected a base icon pack to apply to all Hangar icons.\n\nYou may want to select one from the <b>General</b> tab first.</string>
    <string name="title_pinned_category">Pinned apps</string>
    <string name="title_pinned_sort_preference">Pinned app sorting</string>
    <string name="title_pinned_placement_preference">Pinned app placement</string>
    <string name="pinned_sort_time">Time spent in app</string>
    <string name="pinned_sort_alphabetical">Alphabetical</string>
    <string name="pinned_sort_last_opened">Last opened</string>
    <string name="pinned_sort_added">Time pinned</string>
    <string-array name="entries_pinned_sort_preference" translatable="false">
        <item>@string/pinned_sort_time</item>
        <item>@string/pinned_sort_alphabetical</item>
        <item>@string/pinned_sort_last_opened</item>
        <item>@string/pinned_sort_added</item>
    </string-array>
    <string-array name="values_pinned_sort_preference" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pinned_placement_left">Left</string>
    <string name="pinned_placement_right">Right</string>
    <string-array name="entries_pinned_placement_preference" translatable="false">
        <item>@string/pinned_placement_left</item>
        <item>@string/pinned_placement_right</item>
    </string-array>
    <string-array name="values_pinned_placement_preference" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="title_more_apps_category">Pages</string>
    <string name="title_more_apps">Multiple pages</string>
    <string name="summary_more_apps">Adds a button to switch pages</string>
    <string name="title_more_apps_pages">Number of pages</string>
    <string name="summary_more_apps_pages">Switch between %s pages</string>
    <string-array name="values_more_apps_pages_preference" translatable="false">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_more_apps_icon">Switcher icon</string>
    <string name="title_weight_category">Sorting and Icon Order</string>
    <string name="title_weighted_recents_preference">Weighted sorting</string>
    <string name="summary_weighted_recents_preference">Apps sorted by most used and recency</string>
    <string name="title_weight_priority_preference">Weight bias</string>
    <string name="summary_wildcard_preference" translatable="false">%s</string>
    <string name="dialog_weight_priority_preference">Choose a weight</string>
    <string name="weight_priority_default">Default</string>
    <string name="weight_priority_recency">Recency</string>
    <string name="weight_priority_launches">Number of launches</string>
    <string name="weight_priority_time">Time spent in app</string>
    <string-array name="entries_weight_priority_preference" translatable="false">
        <item>@string/weight_priority_default</item>
        <item>@string/weight_priority_recency</item>
        <item>@string/weight_priority_launches</item>
        <item>@string/weight_priority_time</item>
    </string-array>
    <string-array name="values_weight_priority_preference" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_priority_preference">Notification position</string>
    <string name="summary_priority_preference">%s position in notification drawer</string>
    <string name="dialog_priority_preference">Choose a position</string>
    <string name="priority_top">Top</string>
    <string name="priority_normal">Normal</string>
    <string name="priority_bottom">Bottom (hides in statusbar/lockscreen)</string>
    <string-array name="entries_priority_preference" translatable="false">
        <item>@string/priority_top</item>
        <item>@string/priority_normal</item>
        <item>@string/priority_bottom</item>
    </string-array>
    <string-array name="values_priority_preference" translatable="false">
        <item>2</item>
        <item>0</item>
        <item>-2</item>
    </string-array>
    <string name="summary_priority_on_l_notification">With Lollipop, Hangar will always be set to bottom.  In order to set top priority for Hangar, you must use the new built-in toggle that Android provides.\n\n<b>Turn on Priority after launching notification settings.</b>"</string>
    <string name="priority_on_l_accept_button">Launch notification settings</string>
    <string name="priority_on_l_cancel_button">Cancel</string>
    <string name="title_smart_notification">Smart notification sort</string>
    <string name="summary_smart_notification">Only reorder when a new icon is added</string>
    <string name="title_floating_windows">Launch apps in floating windows</string>
    <string name="summary_floating_windows">Only available in supported ROMs</string>
    <string name="alert_floating_windows">Supported in XHaloFloatingWindow, AOSPA and derivatives.</string>
    <string name="title_appsno_preference">Number of apps</string>
    <string name="summary_appsno_preference">Showing %s apps</string>
    <string name="summary_appsno_second_row_preference">Showing %s apps per row</string>
    <string name="dialog_appsno_preference">Choose no. of apps to show</string>
    <string-array name="entries_appsno_preference" translatable="false">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="title_second_row_preference">Second row</string>
    <string name="summary_second_row_preference">Show an additional row of apps</string>
    <string name="alert_second_row_summary">Android will only show the <b>top notification</b> as expanded by default.\n\nIf your Hangar priority is not set to <i>Top</i>, the second row <b>will be hidden</b> if not at the top of the notification drawer and need to be expanded manually in order to be shown.</string>
    <string name="title_statusbar_icon_preference">Statusbar icon</string>
    <string name="dialog_statusbar_icon_preference">Choose an icon style</string>
    <string name="alert_title_statusbar_icon_preference">Just so you know..</string>
    <string name="alert_message_statusbar_icon_preference">Due to the limitations of Android, disabling the statusbar icon can only be done by lowering the priority of the notification.\n\nTL;DR Your Hangar bar will be at the bottom of the notification drawer.</string>
    <string name="statusbar_icon_warm_white">Warm white icon</string>
    <string name="statusbar_icon_cold_white">Cold white icon</string>
    <string name="statusbar_icon_blue_white">Blue white icon</string>
    <string name="statusbar_icon_all_white">All white icon (default)</string>
    <string name="statusbar_icon_warm_black">Warm black icon</string>
    <string name="statusbar_icon_cold_black">Cold black icon</string>
    <string name="statusbar_icon_blue_black">Blue black icon</string>
    <string name="title_divider_preference">Enable divider</string>
    <string name="summary_divider_preference">Shows a divider between each app icon</string>
    <string name="title_colorize_preference">Colorize notification icons</string>
    <string name="summary_colorize_preference">Change the color of the notification icons</string>
    <string name="title_icon_color_preference">Color</string>
    <string name="title_icon_color_category">Icon Color</string>
    <string name="title_top_spinner">Top</string>
    <string name="title_sort_spinner">Sort by</string>
    <string name="refresh_button">Refresh</string>
    <string name="title_icon_size_preference">Icon size</string>
    <string name="title_background_color_preference">Background color</string>
    <string name="appsno_category">Number of apps</string>
    <string name="title_apps_by_widget_size_preference">Automatic</string>
    <string name="summary_apps_by_widget_size_preference">Populate by available space</string>
    <string name="aesthetics_category">Aesthetics</string>
    <string name="title_stats_widget_appsno_preference">Portrait</string>
    <string name="summary_stats_widget_appsno_preference">Showing up to a maximum of %s apps</string>
    <string name="title_stats_widget_appsno_ls_preference">Landscape</string>
    <string name="summary_stats_widget_appsno_ls_preference">Showing up to a maximum of %s apps</string>
    <string name="instructions_1_1">"Welcome to Hangar!"</string>
    <string name="instructions_1_2">"Now that Hangar is installed, it has added an <b>app shortcut bar</b> to your notification drawer.  It will also start monitoring the frequency and amount of time you spend in your apps."</string>
    <string name="instructions_1_3">"As Hangar follows your daily usage, it will use this data to prioritize the apps you rely on most.  With every app you use, Hangar gets smarter and changes those shortcuts in real time to suit your needs."</string>
    <string name="instructions_1_swipe">Swipe to next page</string>
    <string name="instructions_2_1">"Statistics"</string>
    <string name="instructions_2_2">"Hangar also keeps track of your in-app usage!"</string>
    <string name="instructions_2_3">"You can check the stats under Hangar\'s <b>Apps tab</b> or by placing the <b>Stats widget</b> on your homescreen."</string>
    <string name="instructions_3_1">"Customizations"</string>
    <string name="instructions_3_2">"In addition to the default <b>notification drawer</b> app shortcut bar, you can add and customize a <b>widget</b> for launching apps.  Specify the color, size, quantity, background color and more."</string>
    <string name="instructions_3_3">"You can also <b>pin</b> apps to be permanently anchored.  Got an <b>icon pack</b> you like?  Hangar supports icon packs and even the ability to manually change an individual app\'s icon.\n\nFinally, you can exclude apps from showing up with the <b>blacklist</b> option.  Do all this and more from the Hangar <b>Apps tab</b>."</string>
    <string name="instructions_4_1">"Get started"</string>
    <string name="instructions_4_2">"Hangar is a lightweight tool that makes launching apps convenient from anywhere in Android.\n\nTo enjoy the full benefits of this tool, it should have at least a day\'s worth of monitored app statistics to base its recommendations on.\n\nEnjoy and thank you for trying Hangar!"</string>
    <string name="instructions_4_button">Configure Hangar</string>
</resources>