<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <PreferenceCategory
        android:title="@string/appsno_category">

        <SwitchPreference
            android:key="apps_by_widget_size_preference"
            android:title="@string/title_apps_by_widget_size_preference"
            android:summary="@string/summary_apps_by_widget_size_preference"
            android:disableDependentsState="true" />

        <ca.mimic.apphangar.UpdatingListPreference
            android:key="stats_widget_appsno_preference"
            android:title="@string/title_stats_widget_appsno_preference"
            android:summary="@string/summary_stats_widget_appsno_preference"
            android:entries="@array/entries_apps_widget_appsno_preference"
            android:entryValues="@array/entries_apps_widget_appsno_preference"
            android:dialogTitle="@string/dialog_appsno_preference"
            android:dependency="apps_by_widget_size_preference" />

        <ca.mimic.apphangar.UpdatingListPreference
            android:key="stats_widget_appsno_ls_preference"
            android:title="@string/title_stats_widget_appsno_ls_preference"
            android:summary="@string/summary_stats_widget_appsno_ls_preference"
            android:entries="@array/entries_apps_widget_appsno_preference"
            android:entryValues="@array/entries_apps_widget_appsno_preference"
            android:dialogTitle="@string/dialog_appsno_preference"
            android:dependency="apps_by_widget_size_preference" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_weight_category">

        <CheckBoxPreference
            android:key="weighted_recents_preference"
            android:title="@string/title_weighted_recents_preference"
            android:summary="@string/summary_weighted_recents_preference" />

        <ca.mimic.apphangar.UpdatingListPreference
            android:key="weight_priority_preference"
            android:title="@string/title_weight_priority_preference"
            android:summary="@string/summary_weight_priority_preference"
            android:entries="@array/entries_weight_priority_preference"
            android:entryValues="@array/values_weight_priority_preference"
            android:dialogTitle="@string/dialog_weight_priority_preference"
            android:dependency="weighted_recents_preference"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_icon_color_category">

        <CheckBoxPreference
            android:key="colorize_preference"
            android:title="@string/title_colorize_preference"
            android:summary="@string/summary_colorize_preference" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="icon_color_preference"
            android:title="@string/title_icon_color_preference"
            android:defaultValue="0xffffffff"
            alphaSlider="true"
            android:dependency="colorize_preference" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/aesthetics_category">

        <ca.mimic.apphangar.UpdatingListPreference
            android:key="icon_size_preference"
            android:title="@string/title_icon_size_preference"
            android:summary="@string/summary_icon_size_preference"
            android:entries="@array/entries_icon_size_preference"
            android:entryValues="@array/values_icon_size_preference"
            android:dialogTitle="@string/title_icon_size_preference" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="background_color_preference"
            android:title="@string/title_background_color_preference"
            android:defaultValue="0x00000000"
            alphaSlider="true" />

    </PreferenceCategory>

</PreferenceScreen>

