<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <ca.mimic.apphangar.UpdatingListPreference
        android:key="appsno_preference"
        android:title="@string/title_appsno_preference"
        android:summary="@string/summary_appsno_preference"
        android:entries="@array/entries_appsno_preference"
        android:entryValues="@array/entries_appsno_preference"
        android:dialogTitle="Choose no. of apps to show" />

    <CheckBoxPreference
        android:key="divider_preference"
        android:title="@string/title_divider_preference"
        android:summary="@string/summary_divider_preference" />

    <PreferenceCategory
        android:title="@string/title_icon_color_category">

        <CheckBoxPreference
            android:key="colorize_preference"
            android:title="@string/title_colorize_preference"
            android:summary="@string/summary_colorize_preference" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="icon_color_preference"
            android:title="@string/title_icon_color_preference"
            android:defaultValue="0xffffffff"
            android:dependency="colorize_preference" />
    </PreferenceCategory>
</PreferenceScreen>