<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <ca.mimic.apphangar.UpdatingListPreference
        android:key="stats_widget_appsno_preference"
        android:title="@string/title_stats_widget_appsno_preference"
        android:summary="@string/summary_stats_widget_appsno_preference"
        android:entries="@array/entries_stats_widget_appsno_preference"
        android:entryValues="@array/entries_stats_widget_appsno_preference"
        android:dialogTitle="@string/dialog_appsno_preference" />

    <ca.mimic.apphangar.UpdatingListPreference
        android:key="stats_widget_appsno_ls_preference"
        android:title="@string/title_stats_widget_appsno_ls_preference"
        android:summary="@string/summary_stats_widget_appsno_ls_preference"
        android:entries="@array/entries_stats_widget_appsno_ls_preference"
        android:entryValues="@array/entries_stats_widget_appsno_ls_preference"
        android:dialogTitle="@string/dialog_appsno_preference" />

    <CheckBoxPreference
        android:key="divider_preference"
        android:title="@string/title_divider_preference"
        android:summary="@string/summary_divider_preference" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="background_color_preference"
        android:title="@string/title_background_color_preference"
        android:defaultValue="0x00000000"
        alphaSlider="true" />
</PreferenceScreen>

