<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedResources"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    tools:context="ca.mimic.apphangar.Instructions$PlaceholderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/instructions_3_1"/>

        <include layout="@layout/instructions_img_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="15dp"
            android:text="@string/instructions_3_2"/>

        <include layout="@layout/instructions_img_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/instructions_3_3"/>

    </LinearLayout>

</ScrollView>
